--- a/sample/views/index.ejs
+++ b/sample/views/index.ejs
@@ -8,14 +8,29 @@
     <script src="/javascripts/TrackballControls.js"></script>
     <script src="http://www.janthor.com/lib/TinyTrackballControls.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+      <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+      <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+      <script src="http://layout.jquery-dev.net/lib/js/jquery.layout-latest.js"></script>
+      <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css"/>
+      <link rel="stylesheet" href="/stylesheets/layout-default-latest.css"/>
 
+<!--      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+-->
+
+
+    <script src="http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+
+
+<!--
     <script src="/codemirror/lib/codemirror.js"></script>
     <script src="/codemirror/mode/javascript/javascript.js"></script>
     <script src="/codemirror/lib/util/matchbrackets.js"></script>
     <script src="/codemirror/lib/util/continuecomment.js"></script>
     <script src="/codemirror/lib/util/simple-hint.js"></script>
     <script src="/codemirror/lib/util/javascript-hint.js"></script>
+
+
     <link rel="stylesheet" href="/codemirror//lib/util/simple-hint.css">
 
     <link rel="stylesheet" href="/codemirror/theme/neat.css">
@@ -35,65 +50,113 @@
     <link rel="stylesheet" href="/codemirror/theme/twilight.css">
 
     <link rel=stylesheet href="codemirror/lib/codemirror.css"/>
+-->
 
     <script src="/CSGTree.js"></script>
 
-    <style type=text/css>
-      .CodeMirror {
-        float: left;
-        width: 50%;
+      <style type="text/css">
+
+              /* Sticky footer styles
+                 -------------------------------------------------- */
+
+          html,
+          body {
+              height: 100%;
+              width:		100%;
+              padding:	0;
+              margin:		0;
+              overflow:	auto; /* when page gets too small */
+              /* The html and body elements cannot have any padding or margin. */
+          }
+
+              /* Lastly, apply responsive CSS fixes as necessary */
+          @media (max-width: 767px) {
+              #footer {
+                  margin-left: -20px;
+                  margin-right: -20px;
+                  padding-left: 20px;
+                  padding-right: 20px;
+              }
+          }
+          .pane {
+              display:	none; /* will appear when layout inits */
+          }
+
+          #container {
+              background:	#999;
+              height:		800px;
+              margin:		0 auto;
+              width:		100%;
+              max-width:	1280px;
+              min-width:	700px;
+              _width:		700px; /* min-width for IE6 */
+          }
+
+      #editor  {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         border: 1px solid black;
       }
-       .3DView {
-        width: 49%;
-        float: left;
-        height: 300px;
+      #graphical_view {
+        width: 100%;
+        height: 100%;
         border: 1px solid black;
-        border-left: 0px;
       }
+
+          .ui-layout-west {
+              overflow: hidden;
+          }
+          .ui-layout-center {
+              overflow: hidden;
+          }
     </style>
 
 
   </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+  <body  style="">
+  <div class="pane ui-layout-center" style="background: #5f9ea0">
+      <div id="graphical_view"  class="graphical_view"  style="top:0;left:0;width:100%;height:100%;background-color:#98fb98"></div>
+  </div>
+  <div class="pane ui-layout-north" style="background: #b22222">
+      <button id="button"> Test</button>
+  </div>
+  <div class="pane ui-layout-south" style="background: #f0f8ff">
+      <div style="">
+        <pre id="ascii_mesh" style="font-size=0.8em"><pre>
+     </div>
+  </div>
+  <div class="pane ui-layout-east">East</div>
+  <div class="pane ui-layout-west">
 
-<textarea id="code" name="code" style="margin: 2px; height: 200px; width: 900px;"  row="20" col="80" >
-    var height = 20;
-    var thickness = 2;
-    var radius  =10.0;
+      <div id="editor" class="editor"  >
+var height = 20;
+var thickness = 2;
+var radius  =10.0;
+
+var s1 = csg.makeCylinder([0,0,0],[0,0,height] , radius);
+var s2 = csg.makeSphere([0,0,0], radius);
+var s3 = csg.makeCylinder([0,0,-radius*0.7],[0,0,height], radius*2);
+var s4 = csg.fuse(s1,s2);
+var s5 = csg.common(s4,s3);
 
 
+var r1 = csg.makeCylinder([0,0,thickness],[0,0,height] , radius-thickness);
+var r2 = csg.makeSphere([0,0,0],radius-thickness);
+var r3 = csg.makeCylinder( [0,0,-radius*0.7+thickness],[0,0,height], radius*2);
+var r4 = csg.fuse(r1,r2);
+var r5 = csg.common(r4,r3);
 
-    var s1 = csg.makeCylinder([0,0,0],[0,0,height] , radius);
-    var s2 = csg.makeSphere([0,0,0], radius);
-    var s3 = csg.makeCylinder([0,0,-radius*0.7],[0,0,height], radius*2);
-    var s4 = csg.fuse(s1,s2);
-    var s5 = csg.common(s4,s3);
+var solid  = csg.cut(s5,r5);
+return solid;
+      </div>
+
+  </div>
 
 
-    var r1 = csg.makeCylinder([0,0,thickness],[0,0,height] , radius-thickness);
-    var r2 = csg.makeSphere([0,0,0],radius-thickness);
-    var r3 = csg.makeCylinder( [0,0,-radius*0.7+thickness],[0,0,height], radius*2);
-    var r4 = csg.fuse(r1,r2);
-    var r5 = csg.common(r4,r3);
-
-    var solid  = csg.cut(s5,r5);
-    return solid;
-</textarea>
-
-    <button id="button"> Test</button>
-    <div id="3DView" style="width:400px;height:400px;background-color:black">
-
-    </div>
-
-    <pre id="ascii_mesh" style="font-size=0.8em"><pre>
 
     <script src="/javascripts/threejsView.js"></script>
-
-    </script>
-
 
   </body>
 </html>
