--- a/sample/views/index.ejs
+++ b/sample/views/index.ejs
@@ -6,22 +6,17 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="/javascripts/three.js"></script>
     <script src="/javascripts/TrackballControls.js"></script>
-    <script src="http://www.janthor.com/lib/TinyTrackballControls.js"></script>
-
-    <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
-    <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-    <script src="http://layout.jquery-dev.net/lib/js/jquery.layout-latest.js"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css"/>
+    <script src="/javascripts/TinyTrackballControls.js"></script> <!--http://www.janthor.com/lib/-->
+    <script src="/javascripts/jquery-1.8.3.js"></script><!--http://code.jquery.com/jquery-1.8.3.js -->
+    <script src="/javascripts/jquery-ui.js"></script>// http://code.jquery.com/ui/1.9.2/jquery-ui.js
+    <!-- <script src="http://layout.jquery-dev.net/lib/js/jquery.layout-latest.js"></script>-->
+    <script src="/javascripts/jquery.layout-latest.js"></script>
+    <link rel="stylesheet" href="stylesheets/jquery-ui.css" /> <!-- http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css -->
     <link rel="stylesheet" href="/stylesheets/layout-default-latest.css"/>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.js"></script>
+    <script src="/javascripts/angular.js"></script><!--http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.js-->
 
-<!--      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
--->
-
-
-    <script src="http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/javascripts/ace.js" type="text/javascript" charset="utf-8"></script><!--http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js-->
 
 
 <!--
