* refactor out GeomView.js

--- a/sample/views/index.ejs
+++ b/sample/views/index.ejs
@@ -187,7 +187,8 @@ display(solid.translate([0,dist,0]));
 
 
 
-    <script src="/javascripts/threejsView.js"></script>
+    <script src="/GeomView.js"></script>
+    <script src="/threejsView.js"></script>
 
   </body>
 </html>
