--- a/sample/views/index.ejs
+++ b/sample/views/index.ejs
@@ -121,6 +121,7 @@
   </div>
   <div class="pane ui-layout-north" style="background: #b22222">
       <button id="button">Update Geometry</button>
+      <button id="zoomAll">Zoom All</button>
   </div>
   <div class="pane ui-layout-south" style="background: #f0f8ff">
       <div id='loadingDiv'> Please wait...  <img src='/images/spinner_24.gif' />  </div>
