--- a/sample/views/index.ejs
+++ b/sample/views/index.ejs
@@ -8,7 +8,7 @@
     <script src="/javascripts/TrackballControls.js"></script>
     <script src="/javascripts/TinyTrackballControls.js"></script> <!--http://www.janthor.com/lib/-->
     <script src="/javascripts/jquery-1.8.3.js"></script><!--http://code.jquery.com/jquery-1.8.3.js -->
-    <script src="/javascripts/jquery-ui.js"></script>// http://code.jquery.com/ui/1.9.2/jquery-ui.js
+    <script src="/javascripts/jquery-ui.js"></script>
     <!-- <script src="http://layout.jquery-dev.net/lib/js/jquery.layout-latest.js"></script>-->
     <script src="/javascripts/jquery.layout-latest.js"></script>
     <link rel="stylesheet" href="stylesheets/jquery-ui.css" /> <!-- http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css -->
