--- a/sample/views/index.ejs
+++ b/sample/views/index.ejs
@@ -190,6 +190,15 @@ display(solid.translate([0,dist,0]));
 
     <script src="/GeomView.js"></script>
     <script src="/threejsView.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-41181410-1', 'cloudapp.net');
+  ga('send', 'pageview');
+
+</script>
   </body>
 </html>
