Updating to Threejs 83
- Threejs from r58 to r83
- Projector.js now is external file of Threejs
- TrackballControls (Updating required by r83)
- jQuery (Updating from 1.8.3 to 2.2.4)
- jQuery.Layout (Updating from 1.3 to 1.4, required by jQuery)
- Other small changes to enable run on r83, some deprecated methods.

--- a/sample/views/index.ejs
+++ b/sample/views/index.ejs
@@ -7,7 +7,10 @@
     <script src="/javascripts/three.js"></script>
     <script src="/javascripts/TrackballControls.js"></script>
     <script src="/javascripts/TinyTrackballControls.js"></script> <!--http://www.janthor.com/lib/-->
-    <script src="/javascripts/jquery-1.8.3.js"></script><!--http://code.jquery.com/jquery-1.8.3.js -->
+      <script src="/javascripts/Projector.js"></script>
+
+
+      <script src="/javascripts/jquery-2.2.4.js"></script><!--http://code.jquery.com/jquery-1.8.3.js -->
     <script src="/javascripts/jquery-ui.js"></script>
     <!-- <script src="http://layout.jquery-dev.net/lib/js/jquery.layout-latest.js"></script>-->
     <script src="/javascripts/jquery.layout-latest.js"></script>
@@ -47,10 +50,11 @@
     <link rel="stylesheet" href="/codemirror/theme/twilight.css">
 
     <link rel=stylesheet href="codemirror/lib/codemirror.css"/>
--->
+
 
     <script src="/CSGTree.js"></script>
 
+  -->
       <style type="text/css">
 
               /* Sticky footer styles
