--- a/sample/views/viewer.ejs
+++ b/sample/views/viewer.ejs
@@ -5,8 +5,9 @@
     <script src="/javascripts/three.js"></script>
     <script src="/javascripts/TrackballControls.js"></script>
     <script src="/javascripts/TinyTrackballControls.js"></script>
+    <script src="/javascripts/Projector.js"></script>
 
-    <script src="/javascripts/jquery-1.8.3.js"></script>
+    <script src="/javascripts/jquery-2.2.4.js"></script>
     <script src="/javascripts/jquery-ui.js"></script>
 
     <link rel="stylesheet" href="/stylesheets/jquery-ui.css"/>
