--- a/sample/angularjs/views/viewer.ejs
+++ b/sample/angularjs/views/viewer.ejs
@@ -54,7 +54,7 @@ see https://github.com/blueimp/jQuery-File-Upload/wiki/Basic-plugin
 
 <div style="width:100%;height:100%;position:absolute;top:0;left:0;z-index:-1;">
     <div id="graphical_view" class="graphical_view"
-         style="top:0;left:0;width:100%;height:100%;background-color:#98fb98"></div>
+         style="top:0;left:0;width:100%;height:100%;background-color:#8cabc2;  background-color: #8cabc2; margin: 0px; overflow: hidden; background-image: -webkit-gradient(#8cabc2, #becfdc, #c5d5e0);   background-image: -webkit-linear-gradient(#8cabc2, #becfdc, #c5d5e0); background-image: -moz-linear-gradient(#8cabc2, #becfdc, #c5d5e0); background-image: -o-linear-gradient(#8cabc2, #becfdc, #c5d5e0); background-image: linear-gradient(#8cabc2, #becfdc, #c5d5e0);"></div>
 </div>
 
 <div id="response"></div>
