--- a/sample_angular2/src/app/app.component.css
+++ b/sample_angular2/src/app/app.component.css
@@ -25,7 +25,7 @@
 }
 
 #page-content-wrapper {
-  width: 100%;
+  width: 500px;
   padding-top: 50px;
   transition: all 0.4s ease 0s;
 }
@@ -85,6 +85,22 @@
   padding-right: 15px;
 }
 
+::-webkit-scrollbar {
+  width: 0.1em;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(100, 100, 100, 0.8);
+}
+
+::-webkit-scrollbar-corner,
+::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(100, 100, 100, 0.4);
+}
 @media (max-width:767px) {
 
   #wrapper {
