--- a/sample_angular2/src/app/app.component.html
+++ b/sample_angular2/src/app/app.component.html
@@ -53,13 +53,8 @@
   </div>
   <!-- Page content -->
   <div id="page-content-wrapper">
-
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <app-viewer></app-viewer>
-        </div>
-      </div>
+      <app-viewer hiddenSideBar="collapse"></app-viewer>
     </div>
   </div>
 </div>
