Add OCCT 7 support to node-occ

--- a/sample/views/viewer.ejs
+++ b/sample/views/viewer.ejs
@@ -68,7 +68,7 @@ see https://github.com/blueimp/jQuery-File-Upload/wiki/Basic-plugin
 
         "use strict";
 
-        view.clearAll();
+        // view.clearAll();
         view.updateShapeObject(json, function () {
             view.zoomAll();
         });
